--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+* Version 0.6.1 (published 2016-03-20)
+   - Portuguese translation.
+
 * Version 0.6.0 (published 2016-03-18)
   - Rewrite of fBlog.
   - Autotools support.
